--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="/style/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -10,13 +10,21 @@
     <span class="logo"></span>
   </div>
   <div class="middle">
-    <h1>COMING SOON</h1>
-    <hr>
-    <p>35 days left</p>
+    <h1>Welcome to My Website!</h1>
   </div>
   <div class="bottomleft">
-    <p></p>
+    <p>Some text</p>
   </div>
+</div>
+
+<div class="section about-section">
+  <h2>About</h2>
+  <p>Add your content here to describe yourself or your website.</p>
+</div>
+
+<div class="section tech-writes-section">
+  <h2>Tech Writes</h2>
+  <p>Write about your technical articles, blog posts, or any tech-related content.</p>
 </div>
 
 </body>
