--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/style/styles.css">
 </head>
 <body>
 
@@ -11,20 +11,16 @@
   </div>
   <div class="middle">
     <h1>Welcome to My Website!</h1>
+    <hr>
+    <p>Choose an option below:</p>
+    <div class="buttons">
+      <a href="/about/about.html"><button>About</button></a>
+      <a href="/write-ups/tech-writes.html"><button>Tech Writes</button></a>
+    </div>
   </div>
   <div class="bottomleft">
-    <p>Some text</p>
+    <p></p>
   </div>
-</div>
-
-<div class="section about-section">
-  <h2>About</h2>
-  <p>Add your content here to describe yourself or your website.</p>
-</div>
-
-<div class="section tech-writes-section">
-  <h2>Tech Writes</h2>
-  <p>Write about your technical articles, blog posts, or any tech-related content.</p>
 </div>
 
 </body>
