--- a/index.html
+++ b/index.html
@@ -2,6 +2,31 @@
 <html>
 <head>
   <link rel="stylesheet" href="/style/styles.css">
+  <style>
+    .buttons {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+    }
+
+    .buttons a {
+      display: inline-block;
+      padding: 12px 24px;
+      border: none;
+      background-color: #333;
+      color: #fff;
+      font-size: 18px;
+      text-decoration: none;
+      text-transform: uppercase;
+      border-radius: 4px;
+      transition: background-color 0.3s ease;
+    }
+
+    .buttons a:hover {
+      background-color: #555;
+    }
+  </style>
 </head>
 <body>
 
@@ -14,8 +39,8 @@
     <hr>
     <p>Choose an option below:</p>
     <div class="buttons">
-      <a href="/about/about.html"><button>About</button></a>
-      <a href="/write-ups/tech-writes.html"><button>Tech Writes</button></a>
+      <a href="about.html">About</a>
+      <a href="tech-writes.html">Tech Writes</a>
     </div>
   </div>
   <div class="bottomleft">
